[package]
name = "web-url"
version = "0.6.0"
description = "This library aids in processing web-based URLs."
readme = "README.md"
repository = "https://github.com/nikdeapen/web-url"
homepage = "https://github.com/nikdeapen/web-url"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
